--- a/src/css/main.css
+++ b/src/css/main.css
@@ -60,7 +60,7 @@ body {
     min-height: 650px;
     color: #FCFCFC;
     background-color: #000000;
-    background-image: url(img/everest.jpg);
+    background-image: url(./img/everest.jpg);
     background-repeat: no-repeat;
     background-position: 0 0;
     background-size: cover;
