--- a/src/css/main.css
+++ b/src/css/main.css
@@ -60,7 +60,7 @@ body {
     min-height: 650px;
     color: #FCFCFC;
     background-color: #000000;
-    background-image: url(img/everest.jpg);
+    background-image: url(/img/everest.jpg);
     background-repeat: no-repeat;
     background-position: 0 0;
     background-size: cover;
@@ -159,7 +159,7 @@ body {
     left: 11px;
     width: 13px;
     height: 13px;
-    background-image: url(img/search.svg);
+    background-image: url(/img/search.svg);
     background-repeat: no-repeat;
 }
 
@@ -170,7 +170,7 @@ body {
     left: 11px;
     width: 13px;
     height: 13px;
-    background-image: url(img/login.svg);
+    background-image: url(/img/login.svg);
     background-repeat: no-repeat;
 }
 
@@ -336,7 +336,7 @@ body {
     width: 13px;
     height: 16px;
     left: -21px;
-    background-image: url(img/location.png);
+    background-image: url(/img/location.png);
     background-repeat: no-repeat;
     background-position: center center;
 }
@@ -432,7 +432,7 @@ body {
     right: 53px;
     width: 10px;
     height: 13px;
-    background-image: url(img/Vector-img.png);
+    background-image: url(/img/Vector-img.png);
     background-repeat: no-repeat;
     background-position: center center;
     z-index: 1;
@@ -489,7 +489,7 @@ body {
     padding-right: 10px;
     /* margin-bottom: 133px; */
     min-height: 757px;
-    background: linear-gradient(0deg, rgba(230, 232, 234, 0.8), rgba(230, 232, 234, 0.8)), url(img/Rectangle\ 9.jpg);
+    background: linear-gradient(0deg, rgba(230, 232, 234, 0.8), rgba(230, 232, 234, 0.8)), url(/img/Rectangle\ 9.jpg);
     background-repeat: no-repeat, no-repeat;
     background-position: 0 0, center center;
     background-size: auto, cover;
